--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         .bgimg {
             width: 100%;
             height: 100vh;
-            background-image: url('photo.jpg');
+            background-image: url('Images/photo.jpg');
             background-repeat: repeat-y;
             background-size: 100% 100%;
             background-attachment: fixed;
@@ -30,7 +30,7 @@
         .bgimg1 {
             width: 100%;
             height: 100vh;
-            background-image: url('photo2.jpg');
+            background-image: url('Images/photo2.jpg');
             background-repeat: repeat-y;
             background-size: 100% 100%;
             background-attachment: fixed;
